--- a/HTML/sitePersonalizado.html
+++ b/HTML/sitePersonalizado.html
@@ -39,7 +39,7 @@
         <p>Este servidor está ativo e funcionando perfeitamente!</p>
         <p>Se precisar de mais informações, acesse o painel de monitoramento.</p>
         <div class="footer">
-            Desenvolvido por <strong>Seu Nome</strong> 
+            Desenvolvido por <strong>Lucas Gomes Fagundes</strong> 
         </div>
     </div>
 </body>
