--- a/HTML/sitePersonalizado.html
+++ b/HTML/sitePersonalizado.html
@@ -3,33 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monitoramento AWS</title>
+    <title>Monitoramento de Servidor AWS</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Arial', sans-serif;
+            background-color: #1e1e2e;
+            color: #ffffff;
             text-align: center;
             padding: 50px;
+            margin: 0;
         }
         .container {
-            background: white;
+            background: #282a36;
             padding: 30px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+            max-width: 800px;
             margin: auto;
         }
         h1 {
-            color: #007bff;
+            color: #00c3ff;
+            font-size: 28px;
         }
         p {
             font-size: 18px;
-            color: #333;
+            line-height: 1.6;
+        }
+        .details {
+            text-align: left;
+            margin-top: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 8px;
+        }
+        .details h2 {
+            color: #ff79c6;
+            font-size: 22px;
+            margin-bottom: 10px;
+        }
+        .details ul {
+            list-style: none;
+            padding: 0;
+        }
+        .details ul li {
+            margin: 8px 0;
+            padding: 5px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 5px;
         }
         .footer {
             margin-top: 20px;
             font-size: 14px;
-            color: #666;
+            color: #bbb;
+        }
+        .github-link {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background: #ff79c6;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+            transition: 0.3s;
+        }
+        .github-link:hover {
+            background: #bd5b94;
         }
     </style>
 </head>
@@ -37,10 +76,25 @@
     <div class="container">
         <h1>Monitoramento de Servidor AWS</h1>
         <p>Este servidor está ativo e funcionando perfeitamente!</p>
-        <p>Se precisar de mais informações, acesse o painel de monitoramento.</p>
+        <p>O sistema de monitoramento está operando para garantir disponibilidade e estabilidade.</p>
+
+        <div class="details">
+            <h2>Sobre o Projeto</h2>
+            <ul>
+                <li>✔️ Utiliza Nginx como servidor web</li>
+                <li>✔️ Possui monitoramento automático via Systemd</li>
+                <li>✔️ Envia alertas em tempo real para um webhook do Discord</li>
+                <li>✔️ Agendado para verificação a cada minuto pelo Crontab</li>
+                <li>✔️ Implementado em Python e Bash</li>
+            </ul>
+        </div>
+
+        <a href="https://github.com/seuusuario" class="github-link" target="_blank">Acesse meu GitHub</a>
+
         <div class="footer">
-            Desenvolvido por <strong>Lucas Gomes Fagundes</strong> 
+            Desenvolvido por <strong>Lucas Gomes Fagundes</strong>
         </div>
     </div>
 </body>
 </html>
+
