--- a/HTML/sitePersonalizado.html
+++ b/HTML/sitePersonalizado.html
@@ -89,7 +89,7 @@
             </ul>
         </div>
 
-        <a href="https://github.com/seuusuario" class="github-link" target="_blank">Acesse meu GitHub</a>
+        <a href="https://github.com/ManoRokys/Servidor-Web-Nginx" class="github-link" target="_blank">Acesse meu GitHub</a>
 
         <div class="footer">
             Desenvolvido por <strong>Lucas Gomes Fagundes</strong>
